naprawiono bug z overflow-x

--- a/client/src/style/global.scss
+++ b/client/src/style/global.scss
@@ -18,6 +18,7 @@ body {
 #app {
 	height: 100%;
 	min-height: 100vh;
+	max-width: 100vw;
 	display: flex;
 	flex-direction: column;
 }
